debathena-firefox-extension (10.0.7-0debathena5) unstable; urgency=low

  * Don't attempt to symlink two things in the same place; on newer
    versions of Firefox, /usr/lib/firefox/extensions is a symlink into
    firefox-addons

 -- Jonathan Reed <jdreed@mit.edu>  Mon, 14 May 2012 17:07:11 -0400

debathena-firefox-extension (10.0.7-0debathena4) unstable; urgency=low

  * No change rebuild to pick up config-package-dev 4.13 changes

 -- Jonathan Reed <jdreed@mit.edu>  Wed, 26 Oct 2011 18:35:45 -0400

debathena-firefox-extension (10.0.7-0debathena3) unstable; urgency=low

  * Set maxVersion to * to keep up with Mozilla's hourly release cycle

 -- Jonathan Reed <jdreed@mit.edu>  Wed, 17 Aug 2011 09:35:53 -0400

debathena-firefox-extension (10.0.7-0debathena2) unstable; urgency=low

  * And bump the extension's version number to fix compatibility issues

 -- Jonathan Reed <jdreed@mit.edu>  Tue, 19 Jul 2011 21:13:14 -0400

debathena-firefox-extension (10.0.7-0debathena1) unstable; urgency=low

  * Support Firefox 5.0, since Natty has upgraded to that.

 -- Geoffrey Thomas <geofft@mit.edu>  Tue, 19 Jul 2011 16:40:51 -0400

debathena-firefox-extension (10.0.6-0debathena1) unstable; urgency=low

  * Punt duplex printing code; Gtk+ printing now provides this (Trac #563)
  * Support Firefox 4.0 (Trac #856)
  * Remove chrome.manfiest and chrome/athena.jar in "clean" target
  * Bump Standards-Version and debhelper compatibility level

 -- Jonathan Reed <jdreed@mit.edu>  Wed, 23 Mar 2011 15:51:56 -0400

debathena-firefox-extension (10.0.5-0debathena1) unstable; urgency=low

  * Package the CSAIL CA (Trac: #740).

 -- Alexander Chernyakhovsky <achernya@mit.edu>  Sat, 22 Jan 2011 18:27:00 -0500

debathena-firefox-extension (10.0.4-0debathena1) unstable; urgency=low

  * Bump the max supported version for Firefox 3.6.

 -- Robert Basch <rbasch@mit.edu>  Thu, 29 Apr 2010 16:18:05 -0400

debathena-firefox-extension (10.0.3-0debathena2) unstable; urgency=low
